updated with project details.

--- a/week11/week11_assignment.ipynb
+++ b/week11/week11_assignment.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "TVRiI_Gz_CgL"
+        "id": "Co9SelJV9lMj"
       },
       "source": [
         "# Week 11 Assignment\n",
@@ -18,7 +18,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GIEy0NhZ_CgN"
+        "id": "CxcMqzi09lMk"
       },
       "source": [
         "### 47.1: Filtering and summarizing data\n",
@@ -47,69 +47,126 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "lBhe-i7G_CgO"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aAL1VaxP9lMl",
+        "outputId": "3eb54098-b44f-4746-a14d-7dc4d3b52311"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-1-eba7e1be75b0>:3: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+            "  all_hospitals = pd.read_csv('/content/complications_all....csv')\n"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "# This is just to show you the name to use for the variable you need to create for this step to pass.\n",
-        "all_hospitals = pd.read_csv('https://hds5210-data.s3.amazonaws.com/complications_all.csv')\n"
+        "all_hospitals = pd.read_csv('/content/complications_all....csv')\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
-        "id": "eqsIWmdn_CgP",
-        "outputId": "1580d41e-ce55-4c86-b6d1-7bd2d634769e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kVKO4AYh9lMl",
+        "outputId": "543a0942-d407-41ff-9d32-1f034c511fbd"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "                                   start_date   end_date  number\n",
-            "Facility Name                                                   \n",
-            "BARNES JEWISH HOSPITAL             2015-04-01 2018-06-30  131313\n",
-            "BARNES-JEWISH ST PETERS HOSPITAL   2015-04-01 2018-06-30   15668\n",
-            "BARNES-JEWISH WEST COUNTY HOSPITAL 2015-04-01 2018-06-30    9622\n",
-            "BATES COUNTY MEMORIAL HOSPITAL     2015-07-01 2018-06-30    3117\n",
-            "BELTON REGIONAL MEDICAL CENTER     2015-04-01 2018-06-30    9270\n"
+            "      Facility ID          Facility Name        Address    City State  \\\n",
+            "45534      260001  MERCY HOSPITAL JOPLIN  100 MERCY WAY  JOPLIN    MO   \n",
+            "45535      260001  MERCY HOSPITAL JOPLIN  100 MERCY WAY  JOPLIN    MO   \n",
+            "45536      260001  MERCY HOSPITAL JOPLIN  100 MERCY WAY  JOPLIN    MO   \n",
+            "45537      260001  MERCY HOSPITAL JOPLIN  100 MERCY WAY  JOPLIN    MO   \n",
+            "45538      260001  MERCY HOSPITAL JOPLIN  100 MERCY WAY  JOPLIN    MO   \n",
+            "\n",
+            "       ZIP Code County Name    Phone Number     Measure ID  \\\n",
+            "45534     64804      JASPER  (417) 781-2727  COMP_HIP_KNEE   \n",
+            "45535     64804      JASPER  (417) 781-2727    MORT_30_AMI   \n",
+            "45536     64804      JASPER  (417) 781-2727   MORT_30_CABG   \n",
+            "45537     64804      JASPER  (417) 781-2727   MORT_30_COPD   \n",
+            "45538     64804      JASPER  (417) 781-2727     MORT_30_HF   \n",
+            "\n",
+            "                                            Measure Name  \\\n",
+            "45534  Rate of complications for hip/knee replacement...   \n",
+            "45535               Death rate for heart attack patients   \n",
+            "45536               Death rate for CABG surgery patients   \n",
+            "45537                       Death rate for COPD patients   \n",
+            "45538              Death rate for heart failure patients   \n",
+            "\n",
+            "                      Compared to National  Denominator Score Lower Estimate  \\\n",
+            "45534  No Different Than the National Rate           26   2.5            1.4   \n",
+            "45535  No Different Than the National Rate          175  13.9           11.0   \n",
+            "45536  No Different Than the National Rate           91   2.5            1.2   \n",
+            "45537  No Different Than the National Rate          326   8.5            6.5   \n",
+            "45538  No Different Than the National Rate          461  13.1           10.7   \n",
+            "\n",
+            "      Higher Estimate  Footnote Start Date   End Date  \n",
+            "45534             4.2       NaN 2015-04-01 2018-03-31  \n",
+            "45535            16.9       NaN 2015-07-01 2018-06-30  \n",
+            "45536             5.1       NaN 2015-07-01 2018-06-30  \n",
+            "45537            10.9       NaN 2015-07-01 2018-06-30  \n",
+            "45538            15.9       NaN 2015-07-01 2018-06-30  \n"
           ]
         }
       ],
       "source": [
         "import pandas as pd\n",
         "\n",
-        "# Load and filter data for Missouri hospitals\n",
-        "mo_hospitals = pd.read_csv('https://hds5210-data.s3.amazonaws.com/complications_all.csv')\n",
-        "mo_hospitals = mo_hospitals[mo_hospitals['State'] == 'MO']\n",
+        "# Load the dataset\n",
+        "data = pd.read_csv('/content/complications_all....csv')\n",
         "\n",
-        "# Convert dates and clean 'Denominator' column\n",
+        "# Filter for records in Missouri (State == 'MO')\n",
+        "mo_hospitals = data.query(\"State == 'MO'\").copy()\n",
+        "\n",
+        "# Convert 'Start Date' and 'End Date' columns to datetime, handling errors gracefully\n",
         "mo_hospitals['Start Date'] = pd.to_datetime(mo_hospitals['Start Date'], errors='coerce')\n",
         "mo_hospitals['End Date'] = pd.to_datetime(mo_hospitals['End Date'], errors='coerce')\n",
-        "mo_hospitals = mo_hospitals[mo_hospitals['Denominator'] != 'Not Available']\n",
+        "\n",
+        "# Clean up rows where 'Denominator' is not available or not numeric\n",
+        "mo_hospitals = mo_hospitals[mo_hospitals['Denominator'].apply(lambda x: x != 'Not Available' and pd.to_numeric(x, errors='coerce') is not None)]\n",
+        "\n",
+        "# Convert 'Denominator' to numeric after filtering\n",
         "mo_hospitals['Denominator'] = pd.to_numeric(mo_hospitals['Denominator'], errors='coerce')\n",
         "\n",
-        "# Aggregate by hospital and set index\n",
-        "mo_summary = mo_hospitals.groupby('Facility Name').agg(\n",
-        "    start_date=('Start Date', 'min'),\n",
-        "    end_date=('End Date', 'max'),\n",
-        "    number=('Denominator', 'sum')\n",
-        ").reset_index().set_index('Facility Name')\n",
-        "\n",
-        "# Display the result\n",
-        "print(mo_summary.head())\n"
+        "# Display the cleaned data\n",
+        "print(mo_hospitals.head())\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "source": [
+        "# Aggregate the data by hospital\n",
+        "mo_summary = mo_hospitals.groupby('Facility Name').agg(\n",
+        "    start_date=('Start Date', 'min'),\n",
+        "    end_date=('End Date', 'max'),\n",
+        "    number=('Denominator', 'sum')\n",
+        ").reset_index()\n",
+        "\n",
+        "mo_summary.set_index('Facility Name', inplace=True)"
+      ],
       "metadata": {
-        "id": "OtA419NL_CgQ"
+        "id": "avtnzgWsBQb8"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "ZtBSXOud9lMl"
       },
       "outputs": [],
       "source": [
@@ -124,7 +181,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yjFCIdwh_CgQ"
+        "id": "ljSKdkjD9lMm"
       },
       "source": [
         "---\n",
@@ -136,25 +193,51 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "b530wBHy_CgQ"
-      },
       "source": [
-        "A) Data Access\n",
+        "For project on stroke and brain health, I'll use:\n",
         "\n",
-        "For my final project, I’ll pull data from three distinct sources:\n",
+        "National Institutes of Health (NIH): The NIH's NINDS offers information on neurological conditions, with a particular emphasis on stroke and research on brain health. Data from NIH NINDS.\n",
         "\n",
-        "1. **AWS S3**: An online storage service where I can keep large datasets, like CSV or JSON files. It’s ideal for managing sizable data collections that need frequent updates and easy access.\n",
         "\n",
-        "2. **Relational Database (such as MySQL or PostgreSQL)**: A structured database suited for organized data stored in tables, like user profiles or transaction records. Using SQL, I can efficiently retrieve and modify specific data.\n",
+        "OpenNeuro: An open-access database containing MRI and other brain imaging data for a range of brain disorders. OpenNeuro.\n",
         "\n",
-        "3. **Web API**: I’ll connect to a public API to access data that’s updated continuously, such as weather forecasts, stock prices, or social media content. This approach allows my project to use real-time data without having to store it all."
-      ]
+        "For studies on cognitive decline, the Alzheimer's Disease Neuroimaging Initiative (ADNI) provides brain health information, such as MRI and PET scans. ADNI.\n",
+        "\n",
+        "Data about brain and neurological health from Europe can be found on the European Union Open Data Portal. EU Information.\n",
+        "\n",
+        "NHANES (CDC): Offers CSV-formatted U.S. health data, including stroke risk factors. NHANES.\n",
+        "\n",
+        "https://www.kaggle.com/datasets/jillanisofttech/brain-stroke-dataset this isthe csv file i got data from,remaing i am planning to get."
+      ],
+      "metadata": {
+        "id": "9KXd2L9BCxVG"
+      }
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "oFu7kfuR_CgQ"
+        "id": "fS_JbQZV9lMm"
+      },
+      "source": [
+        "#### A) Data Access\n",
+        "\n",
+        "Your project should include data from at least three distinct types of sources.  For example: AWS S3, Relational Databases, Internet, Web Services, local files.  List what data sources you're planning to use."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Iam going to draw the data from csv and use the remaining CSV, JSON, XLS\n",
+        "at present i ahve only the csv later i will gather to use the jason and XLS to use in my project."
+      ],
+      "metadata": {
+        "id": "iZlAMDVYDJjO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yuxDTNWw9lMm"
       },
       "source": [
         "**Double-click to enter your answer**\n",
@@ -165,7 +248,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ulwZDtfR_CgQ"
+        "id": "-qtCe37x9lMm"
       },
       "source": [
         "#### B. Data Formats\n",
@@ -176,22 +259,18 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "0VJpxNc5_CgQ"
+        "id": "gvIHrlRz9lMm"
       },
       "source": [
-        "For my project, I’ll work with data in multiple formats to suit specific needs:\n",
+        "**Double-click to enter your answer**\n",
         "\n",
-        "1. **CSV**: Ideal for structured data that’s straightforward to analyze in tabular form, like logs or datasets with rows and columns. CSV files are lightweight and widely used for data storage and exchange.\n",
-        "\n",
-        "2. **JSON**: Suited for data from web APIs, as JSON is the standard format for exchanging information between systems, especially online. Its flexibility supports complex data structures, making it perfect for API data.\n",
-        "\n",
-        "3. **Excel**: Useful for data that may be shared or processed by non-technical users. Excel files (.xlsx) are compatible across many platforms and can contain multiple sheets, tables, and formulas. Excel is excellent for reports or curated datasets.\n"
+        "Put your answer here\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_-XSNV17_CgR"
+        "id": "gXJbLV8M9lMm"
       },
       "source": [
         "#### C. Objective\n",
@@ -202,18 +281,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "nux6XMSc_CgR"
+        "id": "oW1yfDL49lMm"
       },
       "source": [
-        "In a real-world setting, this project could support businesses in making better decisions by integrating data from various sources into a single, unified view. For instance, a company could leverage it to analyze customer behavior by combining purchase records from its database with live data from the web, such as popular products or social media trends. Historical data stored in AWS could also be included, giving a full picture of customer trends over time. This comprehensive view could guide decisions about which products to promote, where to focus marketing efforts, and how to engage with customers.\n",
-        "\n",
-        "The project addresses a common challenge: data often exists in different locations and formats, which complicates analysis. By centralizing and standardizing this data, the tool makes it much easier to identify key patterns and respond to them promptly. This solution could save businesses significant time and effort, enabling quicker responses to customer demands and market changes.\n"
+        "For researchers studying stroke prevention and patient outcomes, politicians, and healthcare professionals, this brain stroke initiative may provide insightful information. Age, lifestyle, and pre-existing diseases are some of the factors that affect stroke, which is a major cause of disability and death. By combining several datasets, this research can find patterns, pinpoint high-risk populations, and investigate relationships between the occurrence of stroke and lifestyle factors like obesity. Allocating resources and developing focused public health policies could be influenced by these observations. Clinicians may use predictive models based on this data to evaluate stroke risk and carry out early interventions for healthcare organizations. Comprehending geographical and demographic disparities also helps policymakers create customized community health programs that encourage proactive stroke prevention and improved patient care.\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "hRDQ-4hA_CgR"
+        "id": "RlLINMUf9lMm"
       },
       "source": [
         "\n",
